<resources>
    <string name="app_name">Kitchen Sink</string>
    <string name="kitchen_sink">Kitchen Sink</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_options_title">Feedback Options</string>
    <string name="share_externally">Share externally</string>
    <string name="send_to_webex_backend">Send to Webex backend</string>
    <string name="share_diagnostics_bundle">Share diagnostics bundle</string>
    <string name="feedback_upload_success">Diagnostics uploaded successfully. Feedback ID: %1$s</string>
    <string name="feedback_upload_failed">Diagnostics upload failed: %1$s</string>
    <string name="webhooks">Webhooks</string>
    <string name="uc_login">UC Login</string>
    <string name="setup">Setup</string>
    <string name="initiate_call">Initiate Call</string>
    <string name="waiting_call">Waiting Call</string>
    <string name="logout">Logout</string>
    <string name="common_fragment">Common Fragment</string>
    <string name="calling">Calling…</string>
    <string name="message">Message</string>
    <string name="login_oauth">Web Auth Login</string>
    <string name="login_jwt">JWT Login</string>
    <string name="login_access_token">Access Token Login</string>
    <string name="login">Login</string>
    <string name="android_sdk_sample">Android SDK Sample</string>
    <string name="login_failed">Webex login failed</string>
    <string name="waiting_call_header">Waiting for call…</string>
    <string name="incoming_call">Incoming call…</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="onCall">OnCall</string>
    <string name="meeting">Meeting</string>
    <string name="call_failed">Call Failed</string>
    <string name="start_associated_call_failed">Call Association Failed</string>
    <string name="login_token_empty_error">Please enter valid token.</string>
    <string name="jwt_login_failed">JWT Login Failed</string>
    <string name="auth_token_login_failed">Auth Token Login Failed</string>
    <string name="call_meeting_join">Join</string>
    <string name="assign_host">Assign as Host</string>
    <string name="letIn_member">Let in member from lobby</string>
    <string name="uc_loggedIn">You are LoggedIn (CUCM)</string>
    <string name="wxc_loggedIn">You are LoggedIn (WebexCalling)</string>
    <string name="webexforbroadworks_loggedIn">You are LoggedIn (WebexForBroadworks)</string>
    <string name="phone_service_connected">Phone Services Connected</string>
    <string name="phone_service_failed">Phone Services Failed: </string>
    <string name="uc_login_status">UC Login Status : </string>
    <string name="phone_services_connection_status">Phone Services Connection Status : </string>
    <string name="mute_all_self">Mute all will not work for self.</string>
    <string name="post_message">Post Message</string>
    <string name="post_message_send_title">Compose Message</string>
    <string name="post_message_send_desc">What would you like to say?</string>
    <string name="post_message_send_plain">Plain</string>
    <string name="post_message_send_markdown">Markdown</string>
    <string name="post_message_send_html">Html</string>
    <string name="send_message">Send Mesage</string>
    <string name="post_message_attach">Attach</string>
    <string name="post_message_error">Send Message Error</string>
    <string name="post_message_internal_error">Send Message Internal Error</string>
    <string name="post_message_empty_error">Empty Message</string>
    <string name="post_message_email_empty">Empty email address</string>
    <string name="post_message_attach_permission_error">Permission not granted</string>
    <string name="camera_permission_error">Camera Permission not granted</string>
    <string name="manage_call_permission_error">Manage call Permission not granted</string>
    <string name="permission_error">Permission not granted</string>
    <string name="manage_overlay_permission_error">Overlay permission not granted</string>
    <string name="manage_overlay_permission_granted">Overlay permission granted</string>
    <string name="post_message_invalid_message">Invalid Message</string>
    <string name="edit_message_internal_error">Edit Message Internal Error</string>
    <string name="message_edit_successful">Message edited successfully</string>
    <string name="uc_server_connected">UC Server Connected</string>
    <string name="uc_login_success">UC Login Successful</string>
    <string name="uc_login_failed">UC Login Failed</string>
    <string name="uc_arch_x86_not_supported">CUCM x86 not supported</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="number_star">*</string>
    <string name="number_hash">#</string>
    <string name="tap_to_dial">Tap to dial</string>
    <string name="teams">teams</string>
    <string name="add_team">Add Team</string>
    <string name="add_space">Add Space</string>
    <string name="edit_team">Edit Team</string>
    <string name="edit_space">Edit Space</string>
    <string name="delete_team">Delete Team</string>
    <string name="delete_team_confirm">Confirm Delete Team</string>
    <string name="delete_team_message">Are you sure you want to delete team: \"%1$s\"?</string>
    <string name="spaces">spaces</string>
    <string name="messaging">Messaging</string>
    <string name="created_on">Created On:</string>
    <string name="created_date">Created Date:</string>
    <string name="team_name">Team Name:</string>
    <string name="team_id">Team Id:</string>
    <string name="last_activity">Last Activity:</string>
    <string name="space_title">Space Title:</string>
    <string name="space_id">Space Id:</string>
    <string name="no_data_present">No data present</string>
    <string name="team_actions">Team Actions</string>
    <string name="error_occurred">An Error Occurred</string>
    <string name="mute_all">Mute All</string>
    <string name="unmute_all">Unmute All</string>
    <string name="screen_share">Screen Share</string>
    <string name="more_option">MoreOption</string>
    <string name="mute">Mute</string>
    <string name="hold">Hold</string>
    <string name="audio_mode">Audio Mode</string>
    <string name="add_call">Add Call</string>
    <string name="merge_call">Merge Calls</string>
    <string name="video">Video</string>
    <string name="swap_camera">Swap Camera</string>
    <string name="transfer_call">Transfer Call</string>
    <string name="participants">Participants</string>
    <string name="outgoing_call">Outgoing Call</string>
    <string name="cancel_call">Cancel Call</string>
    <string name="close">Close</string>
    <string name="uc_login_settings">UC Login Settings</string>
    <string name="server_url">Server Url</string>
    <string name="domain">Domain</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="space_actions">Space Actions</string>
    <string name="update_team_name">Update Team Name</string>
    <string name="update_space_name">Update Space Name</string>
    <string name="add_space_to_team">Add Space To Team</string>
    <string name="display_read_status">Display Read Status</string>
    <string name="space_type">Type:</string>
    <string name="space_last_seen">Last Seen:</string>
    <string name="space_last_activity">Last Activity:</string>
    <string name="space_read_status">Space Read Status</string>
    <string name="get_meeting_info">Get Meeting Information</string>
    <string name="meeting_info">Meeting Information</string>
    <string name="membership_id">Membership Id:</string>
    <string name="team_membership_id">Team Membership Id:</string>
    <string name="person_id">Person Id:</string>
    <string name="person_email">Person Email:</string>
    <string name="person_display_name">Person Display Name:</string>
    <string name="person_presence_status">Person Status</string>
    <string name="is_moderator">Moderator:</string>
    <string name="is_monitor">Monitor:</string>
    <string name="person_org_id">Person Org Id:</string>
    <string name="get_members">Get Members</string>
    <string name="get_members_details">Get Membership Details</string>
    <string name="members_details">Membership Details</string>
    <string name="membership_actions">Membership Actions</string>
    <string name="get_me">Get Me</string>
    <string name="person_nick_name">Person Nick Name:</string>
    <string name="person_first_name">Person First Name:</string>
    <string name="person_last_name">Person Last Name:</string>
    <string name="person_avatar">Person Avatar:</string>
    <string name="person_status">Person Status:</string>
    <string name="person_type">Person Type:</string>
    <string name="person_last_activity">Person Last Activity:</string>
    <string name="person_detail">Person Detail</string>
    <string name="set_membership_moderator">Set as Moderator</string>
    <string name="remove_membership_moderator">Remove as Moderator</string>
    <string name="memberships">Memberships</string>
    <string name="sender">Sender:</string>
    <string name="sent_date">Sent Date:</string>
    <string name="messages">Messages</string>
    <string name="no_messages_in_space">No Messages in Space</string>
    <string name="number_plus">+</string>
    <string name="delete_message">Delete Message</string>
    <string name="reply_message">Reply to message</string>
    <string name="feedbackLogsSubject">Feedback with logs</string>
    <string name="success">Success</string>
    <string name="add_person_by_id">Add person by Id</string>
    <string name="add_person_by_email">Add person by Email</string>
    <string name="mark_message_as_read">Mark as read</string>
    <string name="people">People</string>
    <string name="people_actions">People Actions</string>
    <string name="people_fetch_person_id">Fetch Details By ID</string>
    <string name="call_camera">Call camera</string>
    <string name="enable_bg_stream">Enable Background Stream</string>
    <string name="enable_bg_connection">Enable Background Connection</string>
    <string name="enable_phone_permission">Enable Phone Read State</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="call_cap">Call capability</string>
    <string name="audio_call">Audio Call</string>
    <string name="audio_video_call">Audio/Video Call</string>
    <string name="video_stream_mode">Video stream mode</string>
    <string name="video_stream_mode_composited">Composited</string>
    <string name="video_stream_mode_multi">Multi-stream</string>
    <string name="set_log_level">Set Log Level</string>
    <string name="enable_console_log">Enable Console Log</string>
    <string name="shareOptimizeType">Share Optimize Type:</string>
    <string name="autoDetection">Auto Detection</string>
    <string name="optimizeForText">Optimize for Text and Images</string>
    <string name="optimizeForMotionAndVideo">Optimize for Motion and Video</string>
    <string name="defaultShare">Default</string>
    <string name="enableAudio">Enable Audio:</string>
    <string name="noShareType">None</string>
    <string name="cc_switch_label">Enable captions</string>
    <string name="cc_spoken_language">Spoken Language: %1$s</string>
    <string name="cc_translated_language">Translated Language: %1$s</string>
    <string name="cc_show_captions">Show Captions</string>
    <string name="presenter">Presenter</string>
    <string name="cohost">CoHost</string>
    <string name="makeHost">Make Host</string>
    <string name="host">Host</string>
</resources>